# moon

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.qwen/: .env  settings.json
agents/omgapi/: README.md
agents/omgapi/test/: README.md  download-game.js  package-lock.json  package.json  rtest.mjs  启动前端.command  启动后端.command
agents/omgapi/test/analyze/: build-config.js  capture-spins.js  deob-clean.js  deob-full.js  deob-strings.js  extract-paytable-js.js  extract-paytable-lines.js  generate-algorithm.js  infer-cascade.js  infer-config.js  infer-paylines.js  infer-paytable.js  infer-reel-weights.js  infer-triggers.js  lib-layout.js  newgame.js  obfuscate.js  parse-structure.js  qa-vs-omgapi.js  roundtrip.js  run.js  split-modules.js  validate.js
agents/omgapi/test/clean/: pg-39.clean.js  pg-74.clean.js
agents/omgapi/test/config/: pg-39.json  pg-65.json  pg-74.json
agents/omgapi/test/env/: capture-gameinfo.js  game.json  read-paytable.js  scene-dump.js  server.js  smoke-frontend.js
data/agents/omgapi/: agent.json
data/index/: chunks.jsonl
data/index/bm25/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/train/: distill_raw.jsonl  selfgen_raw.jsonl  train.jsonl  valid.jsonl
docs/: 前端选型调研报告.md  技术方案调研报告.md
models/adapters/qwen3-coder-30b-lora/: adapter_config.json  adapters.safetensors
scripts/: chat.sh  serve.sh  train.sh
src/moon/: agents.py  chunking.py  cli.py  config.py  distill.py  embedding.py  indexing.py  mcp_server.py  rag.py  retrieval.py  traindata.py
(+3519 files in other folders)
